Fix mobile movie list text not wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -217,6 +217,8 @@ header .edit {
 }
 
 .movie-list > li {
+    display: table;
+    white-space: normal;
     vertical-align: top;
     display: inline-block;
     width: 100px;
